-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
None
-
Affects Version/s: None
-
Component/s: hotspot
This error was observed on Shenandoah development branch for https://github.com/openjdk/shenandoah/pull/314/files
It is believed that this issue was not introduced by the code provided in that branch, as similar problems have been observed elsewhere.
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/ANT.AMAZON.COM/kdnilsen/github/shenandoah.ref-processor-updates-remembered-set/src/hotspot/share/gc/shenandoah/shenandoahMark.inline.hpp:301), pid=713636, tid=713638
# Error: Shenandoah assert_correct failed; Object klass pointer must go to metaspace
Referenced from:
interior location: 0x00002d0b58670fa8
outside of Java heap
0x00002d0b58670fa8 points into unknown readable memory: 0x000050c16cd058b8 | b8 58 d0 6c c1 50 00 00
Object:
0x000050c16cd058b8 - safe print, no details
region: | 1978|R |O|BTE 50c16cc00000, 50c16d000000, 50c16d000000|TAMS 50c16d000000|UWM 50c16d000000|U 4096K|T 0B|G 2490K|P 0B|S 1605K|L 4077K|CP 0
Raw heap memory:
0x000050c16cd05898: deafbabe deafbabe deafbabe deafbabe
0x000050c16cd058a8: deafbabe deafbabe deafbabe deafbabe
0x000050c16cd058b8: deafbabe deafbabe deafbabe deafbabe
0x000050c16cd058c8: deafbabe deafbabe deafbabe deafbabe
0x000050c16cd058d8: deafbabe deafbabe deafbabe deafbabe
0x000050c16cd058e8: deafbabe deafbabe deafbabe deafbabe
0x000050c16cd058f8: deafbabe deafbabe deafbabe deafbabe
0x000050c16cd05908: deafbabe deafbabe deafbabe deafbabe
0x000050c16cd05918: deafbabe deafbabe deafbabe deafbabe
0x000050c16cd05928: deafbabe deafbabe deafbabe deafbabe
#
# JRE version: OpenJDK Runtime Environment (22.0) (slowdebug build 22-internal-adhoc.kdnilsen.shenandoah.ref-processor-updates-remembered-set)
# Java VM: OpenJDK 64-Bit Server VM (slowdebug 22-internal-adhoc.kdnilsen.shenandoah.ref-processor-updates-remembered-set, mixed mode, tiered, shenandoah gc, linux-amd64)
# No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /home/ANT.AMAZON.COM/kdnilsen/tmp/hunt-dacapo-reference-rem-set.1/hs_err_pid713636.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
It is believed that this issue was not introduced by the code provided in that branch, as similar problems have been observed elsewhere.
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/ANT.AMAZON.COM/kdnilsen/github/shenandoah.ref-processor-updates-remembered-set/src/hotspot/share/gc/shenandoah/shenandoahMark.inline.hpp:301), pid=713636, tid=713638
# Error: Shenandoah assert_correct failed; Object klass pointer must go to metaspace
Referenced from:
interior location: 0x00002d0b58670fa8
outside of Java heap
0x00002d0b58670fa8 points into unknown readable memory: 0x000050c16cd058b8 | b8 58 d0 6c c1 50 00 00
Object:
0x000050c16cd058b8 - safe print, no details
region: | 1978|R |O|BTE 50c16cc00000, 50c16d000000, 50c16d000000|TAMS 50c16d000000|UWM 50c16d000000|U 4096K|T 0B|G 2490K|P 0B|S 1605K|L 4077K|CP 0
Raw heap memory:
0x000050c16cd05898: deafbabe deafbabe deafbabe deafbabe
0x000050c16cd058a8: deafbabe deafbabe deafbabe deafbabe
0x000050c16cd058b8: deafbabe deafbabe deafbabe deafbabe
0x000050c16cd058c8: deafbabe deafbabe deafbabe deafbabe
0x000050c16cd058d8: deafbabe deafbabe deafbabe deafbabe
0x000050c16cd058e8: deafbabe deafbabe deafbabe deafbabe
0x000050c16cd058f8: deafbabe deafbabe deafbabe deafbabe
0x000050c16cd05908: deafbabe deafbabe deafbabe deafbabe
0x000050c16cd05918: deafbabe deafbabe deafbabe deafbabe
0x000050c16cd05928: deafbabe deafbabe deafbabe deafbabe
#
# JRE version: OpenJDK Runtime Environment (22.0) (slowdebug build 22-internal-adhoc.kdnilsen.shenandoah.ref-processor-updates-remembered-set)
# Java VM: OpenJDK 64-Bit Server VM (slowdebug 22-internal-adhoc.kdnilsen.shenandoah.ref-processor-updates-remembered-set, mixed mode, tiered, shenandoah gc, linux-amd64)
# No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /home/ANT.AMAZON.COM/kdnilsen/tmp/hunt-dacapo-reference-rem-set.1/hs_err_pid713636.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#