8315560: GenShen: assert failed: Object klass pointer must go to metaspace

Reviewed-by: kdnilsen